// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRUD sdk test An arbitrary CRUD: CREATE 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "a@a.hu",
  "id": "TEST_ADMIN_USER",
  "name": "NAME",
  "phone": "phone",
  "profileImage": null,
  "roleContexts": Object {
    "items": Array [],
    "nextToken": null,
  },
  "settings": null,
  "updatedAt": Any<String>,
}
`;

exports[`CRUD sdk test An arbitrary CRUD: DELETE 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "a@a.hu",
  "id": "TEST_ADMIN_USER",
  "name": "UPDATED_USER",
  "phone": "phone",
  "profileImage": null,
  "roleContexts": Object {
    "items": Array [],
    "nextToken": null,
  },
  "settings": null,
  "updatedAt": Any<String>,
}
`;

exports[`CRUD sdk test An arbitrary CRUD: READ 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "a@a.hu",
  "id": "TEST_ADMIN_USER",
  "name": "NAME",
  "phone": "phone",
  "profileImage": null,
  "roleContexts": Object {
    "items": Array [],
    "nextToken": null,
  },
  "settings": null,
  "updatedAt": Any<String>,
}
`;

exports[`CRUD sdk test An arbitrary CRUD: READ AFTER DELETE - SHOULD BE NULL 1`] = `null`;

exports[`CRUD sdk test An arbitrary CRUD: SHOULD BE NULL 1`] = `null`;

exports[`CRUD sdk test An arbitrary CRUD: UPDATE 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "a@a.hu",
  "id": "TEST_ADMIN_USER",
  "name": "UPDATED_USER",
  "phone": "phone",
  "profileImage": null,
  "roleContexts": Object {
    "items": Array [],
    "nextToken": null,
  },
  "settings": null,
  "updatedAt": Any<String>,
}
`;

exports[`CRUD sdk test An arbitrary subscription 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "a@a.hu",
  "id": "ADMIN_USERCRUD_SDK_ID",
  "name": "NAME2",
  "phone": "phone",
  "profileImage": null,
  "roleContexts": Object {
    "items": Array [],
    "nextToken": null,
  },
  "settings": null,
  "updatedAt": Any<String>,
}
`;

exports[`CRUD sdk test An arbitrary subscription 2`] = `
Object {
  "createdAt": Any<String>,
  "email": "a@a.hu",
  "id": "ADMIN_USERCRUD_SDK_ID",
  "name": "NAME2",
  "phone": "phone",
  "profileImage": null,
  "roleContexts": Object {
    "items": Array [],
    "nextToken": null,
  },
  "settings": null,
  "updatedAt": Any<String>,
}
`;
